Wed May  5 2004  Joe ALlen <jhallen@world.std.com>
	* utils.c, c.jsf.in:

	Fix c++ keywords.
	Fix parse_ident, which was breaking fortran highlighter.

Tue May  4 2004  Joe Allen <jhallen@world.std.com>
	* rc.c, selinux.c, syntax.c, ufile.c:

	Applied new Selinux patch.

	Checks ~/.joe/syntax for syntax files.

Tue May  4 2004  Joe Allen <jhallen@world.std.com>
	* bw.c, charmap.c, main.c:

	Print locale on startup line.

	Print encoding for ^K <space>.

	Change koi8-T to koi8-t.

Tue May  4 2004  Joe Allen <jhallen@world.std.com>
	* ChangeLog TODO b.c bw.c charmap.c charmap.h cmd.c help.c 
 	i18n.c i18n.h joerc.in jpicorc.in jstarrc.in macro.c main.c 
 	menu.c pw.c pw.h rc.c regex.c rjoerc.in scrn.c scrn.h syntax.c 
 	types.h ublock.c uedit.c uerror.c ufile.c uformat.c umath.c 
 	usearch.c ushell.c utag.c utf8.c utils.c utils.h w.c:

	Everything about character set is now contained in struct charmap.

	Deprecate ^T U.  Now use ^T E to select file encoding.

Mon May  3 2004  Joe Allen <jhallen@world.std.com>
	* :

	Clean up pass: use internal ctype function everywhere.

	Also: ^T E sets file encoding.

Mon Mai  3 2004  Joe Allen <jhallen@world.std.com>
	* utils.c, utils.h, utf8.c, syntax.c, configure.ac, Makefile.am,
	charmap.c, charmap.h:

	No longer use iconv().  Not 100% sure I'm going to leave it this
	way.  Maybe optionally use iconv().

Mon May  3 2004  Joe Allen <jhallen@world.std.com>
	*:

	Eliminate --pedantic warnings.

Mon May  3 2004  Joe Allen <jhallen@world.std.com>
	* bw.c, i18n.c, i18n.h, b.c, configure.ac, regex.c, scrn.c, Makefile.am :

	Fix highlighter when there are utf-8 characters in file.

	No longer depend on wctype.h (working towards not depending on
	iconv()).

Sun May  2 2004  Joe Allen <jhallen@world.std.com>
	* Makefile.am, configure.ac, *rc.in:

	Fix mutt mode: need -wordwrap, not -autoindent.

	Fix configure.ac and Makefile.am to link -liconv if
	necessary.

Sat May 30 2004  Joe Allen <jhallen@world.std.com>
	* syntax.c :
